--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://smallbusinessaccount.github.io/aqjewellery/",
+  "homepage": "https://www.aqjewellery.com",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
